fixed overflowing issue with the notepad.
Went back from div to textarea as there's a copy-pasting issue that keeps the formatting from the copied text.

--- a/style.sass
+++ b/style.sass
@@ -29,7 +29,7 @@
 
 body, html 
     color: var(--text-color-UI)
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0)), var(--background-image)
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0)), var(--background-image)
     height: 100%
     width: 100%
     margin: 0 
@@ -282,12 +282,11 @@ body, html
 .notepad 
     /* background: #3F2E3E */
     background-color: var(--background-color)
-    backdrop-filter: blur(50px) saturate(200%) 
+    backdrop-filter: blur(50px) saturate(250%) 
     /* background: none */
     color: var(--text-color-notepad)
     width: 100%
     height: 100%
-    max-height: 100% 
     padding: 35px
     font-size: var(--text-size-notepad)
     border: 0
@@ -297,6 +296,8 @@ body, html
     box-shadow: #0000002c 10px 11px 20px
     resize: none 
     box-sizing: border-box
+
+    overflow: auto
 
 [contenteditable=true]:empty:before
     content: attr(placeholder)
